Workflow for bes updater sanity tested.